--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Letters (Tip: Use Desktop Mode)</h1>
+        <h1>Letters (Use Desktop Mode)</h1>
     </header>
     <main>
         <a href='letter.html' class="navy-button">Father's Day 2024</a>
